--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 .homepage {
   width: 100%;
   height: 75vh;
-  background: url("./assets/IN-en-20240506-popsignuptwoweeks-perspective_alpha_website_small.jpg");
+  background: url("../assets/IN-en-20240506-popsignuptwoweeks-perspective_alpha_website_small.jpg");
   background-color: rgb(0 0 0 / 40%);
   background-blend-mode: multiply;
   background-position: top -376px right -166px;
